[package]
name = "ci2-nokhwa"
version = "0.1.0"
authors = ["Nile Walker <nile@nilewalker.com>"]
edition = "2021"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
lazy_static.workspace = true

ci2 = { path = "../ci2" }
machine-vision-formats.workspace = true
strand-dynamic-frame.workspace = true


[dependencies.nokhwa]
version = "0.10.7"
# Use the native input backends, enable WGPU integration
features = ["input-native", "output-wgpu"]

[target.'cfg(target_os = "linux")'.dependencies]
rlimit = "0.6"
